# schwarzschild-assembly

./: .gitignore  ANTIGRAVITY_RULES.md  CLAUDE.md  CONTENTS.md  FIXME-04-12.md  LICENSE  OPERATIONS.md  PROCESS.md  README.md  SPACECRAFTS.md  STASIS-LANGUAGE.md  STASIS-SELF-IMPROVEMENT.md  STATUS.md  SYNC_LOG.md  final_pre_submit_output.txt  pre_submit_output.txt  run_gemini.sh  sizes
.agent/: crucible_briefing.md
analyst-inbox/: 2026-04-08-000000-phase1-briefing.md  2026-04-08-211400-phase2-tier1-complete.md  2026-04-09-000300-code-quality-standards.md  2026-04-09-014500-phase2-resubmission-briefing.md  2026-04-09-022000-phase2-round4-briefing.md  2026-04-09-030000-phase2-round5-briefing.md  2026-04-09-030500-phase3-briefing.md  2026-04-09-031000-phase3-briefing.md  2026-04-09-033000-phase4-briefing.md  2026-04-09-034000-phase4.1-remediation.md  2026-04-09-043100-phase5-briefing.md  2026-04-09-045700-phase5-re-submission.md  2026-04-09-151241-phase5-completion.md  2026-04-09-152406-phase6-complete.md  2026-04-09-154650-phase6-remediated.md  2026-04-09-163500-phase7-assembly-line-manager.md  2026-04-09-165000-phase7-remediation.md  2026-04-09-171400-phase8-remediation.md  2026-04-09-195500-phase8-remediation-round2.md  2026-04-09-204100-phase9-completion.md  2026-04-10-010535-phase8-remediation-v2.md  2026-04-10-012300-phase10-completion.md  2026-04-10-014015-phase10-completion-v2-verbatim.md  2026-04-10-021000-phase8-remediation-v3.md  2026-04-10-143117-Phase-8-10-Remediation-Briefing.md  CONTENTS.md
analyst-verdicts/: 2026-04-08-000000-phase1-bootstrap.md  2026-04-08-120000-phase2-z3-variable-mapping.md  2026-04-08-235900-phase2-tier1-review.md  2026-04-09-000100-phase3-rootspine-review.md  2026-04-09-000200-phase4-controlpanel-review.md  2026-04-09-000400-phase2-resubmission-review.md  2026-04-09-020000-phase2-round3-review.md  2026-04-09-023000-phase2-round4-review.md  2026-04-09-024500-phase2-approved.md  2026-04-09-032000-phase3-review.md  2026-04-09-034000-phase3-approved.md  2026-04-09-040000-phase4-review.md  2026-04-09-041500-phase4-approved.md  2026-04-09-043500-phase5-review.md  2026-04-09-045000-phase5-round2-review.md  2026-04-09-050000-phase5-approved.md  2026-04-09-153121-phase6-review.md  2026-04-09-160000-phase6-approved.md  2026-04-09-165500-phase7-review.md  2026-04-09-172000-phase7-approved.md  2026-04-09-194000-phase8-veto.md  2026-04-09-200500-phase8-approved.md  2026-04-09-205500-phase9-veto.md  2026-04-10-010600-phase8-approved.md  2026-04-10-020000-phase8-meta-loop-conditional.md  2026-04-10-020500-phase10-veto.md  2026-04-10-030000-phase10-v2-veto.md  2026-04-10-033000-phase8-metaloop-conditional.md  2026-04-10-200000-phase8-10-remediation-veto.md  2026-04-10-210000-forge-implementation-directive.md  CONTENTS.md  README.md
archive/: DEEP_RESEARCH_PROMPT.md  research.md  research.txt
conductor/: CONTENTS.md  product-guidelines.md  product.md  tech-stack.md  tracks.md
control-panel/: README.md  package-lock.json  package.json
core-station/: CONTENTS.md
core-station/security/: CONTENTS.md  Cargo.toml  README.md
core-station/security/include/: CONTENTS.md  safety_rail.h
core-station/security/proofs/: CONTENTS.md
core-station/security/src/: CONTENTS.md  lib.rs
core-station/security/src/tier1/: CONTENTS.md  fingerprint.rs  mod.rs  sandbox.rs  z3_policy.rs
core-station/security/src/tier2/: CONTENTS.md
core-station/security/tests/: CONTENTS.md  contract_compliance_tests.rs  sandbox_tests.rs
dhamma-adviser/: README.md
dry-dock-archives/: CONTENTS.md
merkle-log/: CONTENTS.md
observability/: README.md  fitness-vector-schema.json  otel-collector-config.yaml
otel-snapshots/: latest.json
safety-rail/: Cargo.toml  README.md
safety-rail/src/: lib.rs
safety-rail/src/tier1/: c_api.rs  fingerprint.rs  mod.rs  sandbox.rs  z3_policy.rs
safety-rail/src/tier2/: README.md
safety-rail/tests/: contract_compliance_tests.rs  sandbox_tests.rs
(+226 files in other folders)
