[package]
name = "sati-central-safety-rail"
version = "0.1.0"
edition = "2021"
description = "Safety verification trait contract for Sati-Central — Tier 1 (Z3/Wasmtime) and Tier 2 (rocq-of-rust)"
license = "MIT"
rust-version = "1.75"

[lib]
name = "safety_rail"
path = "src/lib.rs"

[features]
default = ["tier1"]
# Tier 1: Z3 + Wasmtime (required for production)
tier1 = ["dep:z3", "dep:wasmtime"]
# Tier 2: Tier 1 + rocq-of-rust proofs (optional upgrade path)
# TODO(proposals/pending/): implement Tier 2 once Tier 1 is verified
tier2 = ["tier1"]

[dependencies]
# Z3 SMT solver — Tier 1 formal verification
# Pinned: z3 0.12.x tracks z3 4.12.x upstream; breaking API changes at 0.13
z3 = { version = "0.12", optional = true }

# Wasmtime — sandboxed WASM execution for Tier 1
# Pinned to 25.x: stable API for component model + WASI p2
wasmtime = { version = "25", optional = true, features = ["component-model", "cranelift"] }

# SHA-256 for payload and fingerprint hashing
# sha2 is the canonical choice; ring is faster but requires C build tooling
sha2 = "0.10"

# Structured error context
thiserror = "1"

[dev-dependencies]
# For property-based testing of trait contract compliance
proptest = "1"

[profile.release]
# M5-optimized: native CPU features including AMX, NEON, SVE
opt-level = 3
lto = "thin"
codegen-units = 1
# Safety: abort on panic in release to prevent unwinding across FFI boundaries
panic = "abort"

[profile.release.build-override]
opt-level = 3
