[package]
name = "aethereum-spine-safety-rail"
version = "0.1.0"
edition = "2021"
description = "Safety verification trait contract for Aethereum-Spine — Tier 1 (Z3/Wasmtime) and Tier 2 (rocq-of-rust)"
license = "MIT"
rust-version = "1.75"

[lib]
name = "safety_rail"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[features]
default = ["tier1"]
# Tier 1: Z3 + Wasmtime (required for production)
tier1 = ["dep:z3", "dep:wasmtime", "dep:wasmtime-wasi"]
# Tier 2: Tier 1 + rocq-of-rust proofs (optional upgrade path)
# TODO(proposals/pending/): implement Tier 2 once Tier 1 is verified
tier2 = ["tier1"]

[dependencies]
# FFI-compatible types
libc = "0.2"

# Z3 SMT solver — Tier 1 formal verification
# Pinned: z3 0.12.x tracks z3 4.12.x upstream; breaking API changes at 0.13
z3 = { version = "0.12", optional = true }

# Wasmtime — sandboxed WASM execution for Tier 1
# Pinned to 25.x: stable API for component model + WASI p2
wasmtime = { version = "25", optional = true, features = ["component-model", "cranelift"] }
wasmtime-wasi = { version = "25", optional = true }

# SHA-256 for payload and fingerprint hashing
# sha2 is the canonical choice; ring is faster but requires C build tooling
sha2 = "0.10"

# Structured error context
thiserror = "1"

# JSON deserialization for ProposalPayload and canonical JSON hash verification
# Pinned: 1.x is stable; no breaking changes expected at minor version
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OpenTelemetry — for fitness vector metric emission
# Pinned to 0.21/0.14 for stability with opentelemetry-proto
opentelemetry = { version = "0.21", features = ["metrics"] }
opentelemetry-otlp = { version = "0.14", features = ["metrics"] }
opentelemetry_sdk = { version = "0.21", features = ["metrics", "rt-tokio"] }

[dev-dependencies]
# For property-based testing of trait contract compliance
proptest = "1"
# For compiling human-readable .wat test assets to .wasm
wat = "1.0"
# For async test support in OTel pipeline
tokio = { version = "1", features = ["full"] }

[profile.release]
# M5-optimized: native CPU features including AMX, NEON, SVE
opt-level = 3
lto = "thin"
codegen-units = 1
# Safety: abort on panic in release to prevent unwinding across FFI boundaries
panic = "abort"

[profile.release.build-override]
opt-level = 3
